--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ h1#username {
 
 <div class="container">
   <div class="profile-section">
-    <img src="https://cdn.discordapp.com/avatars/280814183321305089/d558bd758096d6c84434b1246a9986bd?size=1024" alt="Profil Resmi" class="profile-pic floating" />
+    <img src="https://i.hizliresim.com/r99i4al.gif" alt="Profil Resmi" class="profile-pic floating" />
     <div>
       <h1 id="username">TRISTY</h1>
       <p class="bio">Karanlığın içinden gelen bir profil. Aşağıdan sosyal medya hesaplarına ulaşabilirsiniz.</p>
